--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,15 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <!--Content-->
+    <!--toolbar-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarRegister"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"/>
+
+    <!--content-->
     <LinearLayout
-        android:background="@drawable/login_masterung"
+        android:background="#cbffffff"
+        android:padding="15dp"
         android:layout_margin="@dimen/margin1"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <!--Avata-->
+        <ImageView
+            android:scaleType="centerInside"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/avata"
+            android:layout_width="@dimen/icon"
+            android:layout_height="@dimen/icon" />
+
+        <!--name-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!--Icon-->
+            <ImageView
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_action_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <!--textfield-->
+            <EditText
+                android:inputType="textEmailAddress"
+                android:hint="Name : "
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
 
         <!--email-->
         <LinearLayout
@@ -48,33 +88,13 @@
 
             <!--textfield-->
             <EditText
-                android:inputType="textPassword"
+                android:inputType="textEmailAddress"
                 android:hint="Password : "
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
 
-        <!--login-->
-        <Button
-            android:hint="Login"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-
-        <!--new regis-->
-        <TextView
-            android:id="@+id/txtRegister"
-            android:clickable="true"
-            android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/colorAccent"
-            android:text="@string/new_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
